src/test/ui/proc-macro/issue-41211.stderr
error[E0659]: `identity_attr` is ambiguous
  --> $DIR/issue-41211.rs:11:4
   |
LL | #![identity_attr]
   |    ^^^^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `identity_attr` could refer to the attribute macro imported here
  --> $DIR/issue-41211.rs:14:5
   |
LL | use test_macros::identity_attr;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: use `crate::identity_attr` to refer to this attribute macro unambiguously
note: `identity_attr` could also refer to the explicitly registered attribute defined here
  --> $DIR/issue-41211.rs:9:18
   |
LL | #![register_attr(identity_attr)]
   |                  ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
